--- a/css/tcrs.scss
+++ b/css/tcrs.scss
@@ -1,5 +1,24 @@
 @import '../node_modules/materialize-css/sass/materialize';
 
+h1 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
+}
+h2, h3 {
+  color: #444;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+}
+body {
+  margin: 2em;
+}
+body, input[text], button {
+  color: #888;
+  font-family: Cambria, Georgia;
+}
+
 .weeks {
   @extend .row;
 }
+
