jspm support enabled

--- a/app/src/tcrs.scss
+++ b/app/src/tcrs.scss
@@ -1,4 +1,4 @@
-@import '../node_modules/materialize-css/sass/materialize';
+@import './jspm_packages/npm/materialize-css@0.97.6/sass/materialize';
 
 h1 {
   color: #369;
