--- a/app/app/app.component.html
+++ b/app/app/app.component.html
@@ -1,15 +1,29 @@
-<div class="weeks">
-  <div class="week col s1" *ngFor="let w of weeks">
-    <div class="header">{{w.name}}</div>
-    <div class="days">
-      <div class="day row" *ngFor="let d of w.days">
-        <div class="header col s12">{{d.name}}</div>
-        <div class="timeUnits col s12">
-          <div class="timeUnit" *ngFor="let u of d.timeUnits">
-            {{ u.content }}
+<md-toolbar color="primary">
+  <span>TCRS</span>
+  <span class="fill-remaining-space"></span>
+  <span>Tennis Court Reservation System</span>
+</md-toolbar>
+
+<button md-fab>
+  <md-icon class="md-24">add</md-icon>
+</button>
+
+<div class="app-content">
+  <div class="weeks">
+    <div class="week col s1" *ngFor="let w of weeks">
+      <div class="header">{{w.name}}</div>
+      <div class="days">
+        <div class="day row" *ngFor="let d of w.days">
+          <div class="header col s12">{{d.name}}</div>
+          <div class="timeUnits col s12">
+            <div class="timeUnit" *ngFor="let u of d.timeUnits">
+              {{ u.content }}
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
