upgraded Spring Boot

--- a/app/app/components/app/app.html
+++ b/app/app/components/app/app.html
@@ -4,14 +4,8 @@
   <span>Tennis Court Reservation System</span>
 </md-toolbar>
 
-<button md-fab>
-  <md-icon class="md-24">add</md-icon>
-</button>
-
-
 <div class="app-content">
-  <h1>geht eh</h1>
-
+  <calendar-navigator [startDay]="startDay" [endDay]="endDay"></calendar-navigator>
   <md-grid-list cols="7" [style.background]="'royalblue'" rowHeight="50px">
     <md-grid-tile *ngFor="let day of days">
       {{ day.name }}
