--- a/app/app/calendar-navigator/calendar-navigator.component.sass
+++ b/app/app/calendar-navigator/calendar-navigator.component.sass
@@ -1,9 +1,8 @@
 div
-  display: inline-block
   text-align: center
   padding: 10px 0
-  background: grey
   span
     vertical-align: middle
-    &.larger
-      font-size: 50px
+    font-size: 24px
+  md-icon
+    vertical-align: middle
