--- a/app/app/calendar/calendar.component.sass
+++ b/app/app/calendar/calendar.component.sass
@@ -3,6 +3,9 @@
   &.places a
     border-left: 1px solid black
     border-top: 1px solid black
+  &.places a:hover
+    background-color: cornflowerblue
+    color: white
 .cell.hour
   border-top: 1px solid black
 .header .cell:not(.top-first)
