--- a/app/styles.sass
+++ b/app/styles.sass
@@ -6,4 +6,11 @@ body
 .clickable
   cursor: pointer
 
+.link:hover
+  text-decoration: underline
+  cursor: pointer
+
+[hidden]
+  display: none
+
 @import '~@angular/material/prebuilt-themes/indigo-pink.css'
