--- a/app/app/calendar/calendar.component.html
+++ b/app/app/calendar/calendar.component.html
@@ -1,4 +1,18 @@
 <div class="wrapper" fxLayout="row">
+  <div class="left" fxFlex="100px"></div>
+  <div class="content" fxFlex>
+    <input [mdDatepicker]="startDatePicker" value="{{ startDay }}">
+    <button [mdDatepickerToggle]="startDatePicker"></button>
+    <md-datepicker #startDatePicker (selectedChanged)="updateView($event)"></md-datepicker>
+  </div>
+</div>
+<div class="wrapper" fxLayout="row">
+  <div class="left" fxFlex="100px"></div>
+  <div class="content" fxFlex>
+
+  </div>
+</div>
+<div class="wrapper" fxLayout="row">
   <div class="left" fxFlex="20px"></div>
   <div class="content" fxFlex>
     <div class="header" fxLayout="row" fxLayoutAlign="space-between center">
@@ -6,17 +20,13 @@
       <div *ngFor="let day of days" class="cell" fxFlex="13">
         <div>{{day.name}}</div>
         <div fxLayout="row">
-          <div *ngFor="let place of places" fxFlex fxFill>{{place}}</div>
         </div>
       </div>
-
     </div>
-
     <div *ngFor="let hour of hours" fxLayout="row" fxLayoutAlign="space-between center">
       <div class="hour cell" fxFlex="auto">{{hour}}:00 - {{hour + 1}}:00</div>
       <div *ngFor="let day of days" fxFlex="13" class="places cell" fxLayout="row" fxLayoutAlign="center center">
-        <a *ngFor="let place of places" class="link" fxFlex
-           (click)="setReservation(place, hour)">{{ place }}</a>
+        <a class="link" fxFlex (click)="setReservation(hour)">&nbsp;</a>
       </div>
     </div>
   </div>
