--- a/app/styles.sass
+++ b/app/styles.sass
@@ -11,6 +11,6 @@ body
   cursor: pointer
 
 [hidden]
-  display: none
+  display: none !important
 
 @import '~@angular/material/prebuilt-themes/indigo-pink.css'
