--- a/app/app/login/LoginComponent.sass
+++ b/app/app/login/LoginComponent.sass
@@ -1,2 +1,16 @@
-a
-  color: white
+md-card-header
+  text-align: center
+  font-size: 1.5em
+  font-weight: bold
+  padding-bottom: 1em
+
+div.login
+  max-width: 400px
+  margin: 0 auto
+
+.reset-password
+  margin: 10px 0
+
+.social-buttons a
+  width: 100%
+  margin: 5px 0
