added registrationform and switched to ReactiveForms

--- a/app/styles.sass
+++ b/app/styles.sass
@@ -13,4 +13,13 @@ body
 [hidden]
   display: none !important
 
+div.form
+  max-width: 400px
+  margin: 0 auto
+  md-card-header
+    text-align: center
+    font-size: 1.5em
+    font-weight: bold
+    padding-bottom: 1em
+
 @import '~@angular/material/prebuilt-themes/indigo-pink.css'
