--- a/src/styles.sass
+++ b/src/styles.sass
@@ -22,4 +22,8 @@ div.form
     font-weight: bold
     padding-bottom: 1em
 
+  md-select, md-checkbox
+    margin: 1em 0
+
+
 @import '~@angular/material/prebuilt-themes/indigo-pink.css'
