--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,6 +2,7 @@
 
 body
   margin: 0
+  font-family: Roboto, "Helvetica Neue", sans-serif
 
 .clickable
   cursor: pointer
@@ -25,5 +26,10 @@ div.form
   md-select, md-checkbox
     margin: 1em 0
 
+  .error-checkbox
+    margin-top: -1em
+    margin-bottom: 1em
+    font-size: 0.75em
+    color: red
 
 @import '~@angular/material/prebuilt-themes/indigo-pink.css'
