Theming first test

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -32,4 +32,6 @@ div.form
     font-size: 0.75em
     color: red
 
-@import '~@angular/material/prebuilt-themes/indigo-pink.css'
+//@import '~@angular/material/prebuilt-themes/indigo-pink.css'
+
+@import 'theme'
