--- a/src/app/reservation-edit/reservation-edit.component.html
+++ b/src/app/reservation-edit/reservation-edit.component.html
@@ -1,23 +1,16 @@
 <div class="form">
-  <md-card>
+  <md-card [hidden]="!hideRemoveInfo">
     <md-card-header>Court Reservation</md-card-header>
     <md-card-content>
-      <form [formGroup]="form" novalidate (ngSubmit)="onSubmit()">
-        <div fxLayout="column">
-          <div>{{ startDateTimePretty }}</div>
-          <md-select [(formControl)]="hours">
-            <md-option *ngFor="let hour of hourElements" [value]="hour" >Hours: {{ hour }}</md-option>
-          </md-select>
-
-          <md-select [(formControl)]="court">
-            <md-option *ngFor="let court of courts" [value]="court" >Court: {{ court }}</md-option>
-          </md-select>
-          <md-checkbox formControlName="confirmation">I confirm that the information provided is correct.
-          </md-checkbox>
-          <p class="error-checkbox" [hidden]="!confirmation.hasError('required') || !showConfirmationError">Confirmation must be checked</p>
-          <button type="submit" md-raised-button>OK</button>
-        </div>
-      </form>
+      <h1>Edit Zone</h1>
+      <a md-raised-button (click)="remove()">Remove</a>
+    </md-card-content>
+  </md-card>
+  <md-card [hidden]="hideRemoveInfo">
+    <md-card-header>Reservation Remove</md-card-header>
+    <md-card-content>
+      <h1 [hidden]="!hideRemovedInfo">Removing</h1>
+      <h1 [hidden]="hideRemovedInfo">Removed</h1>
     </md-card-content>
   </md-card>
 </div>
