--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,20 @@
 <div class="form">
-  <md-card>
-    <md-card-header>
+  <mat-card>
+    <mat-card-header>
       Login
-    </md-card-header>
-    <md-card-content>
+    </mat-card-header>
+    <mat-card-content>
       <form [formGroup]="formGroup" novalidate (ngSubmit)="onSubmit()">
         <div fxLayout="column">
-          <md-input-container>
-            <input mdInput type="text" formControlName="email" placeholder="EMail">
-            <md-error *ngIf="email.hasError('email')">Invalid EMail format</md-error>
-          </md-input-container>
-          <md-input-container>
-            <input mdInput type="password" formControlName="password" placeholder="Password">
-            <md-error *ngIf="password.hasError('required')">This field is required</md-error>
-          </md-input-container>
-          <button type="submit" md-raised-button>OK</button>
+          <mat-input-container>
+            <input matInput type="text" formControlName="email" placeholder="EMail">
+            <mat-error *ngIf="email.hasError('email')">Invalid EMail format</mat-error>
+          </mat-input-container>
+          <mat-input-container>
+            <input matInput type="password" formControlName="password" placeholder="Password">
+            <mat-error *ngIf="password.hasError('required')">This field is required</mat-error>
+          </mat-input-container>
+          <button type="submit" mat-raised-button>OK</button>
         </div>
       </form>
 
@@ -25,9 +25,9 @@
       <hr>
 
       <div class="social-buttons">
-        <a md-raised-button (click)="loginGoogle()">Login with Google</a>
-        <a md-raised-button (click)="loginFacebook()">Login with Facebook</a>
+        <a mat-raised-button (click)="loginGoogle()">Login with Google</a>
+        <a mat-raised-button (click)="loginFacebook()">Login with Facebook</a>
       </div>
-    </md-card-content>
-  </md-card>
+    </mat-card-content>
+  </mat-card>
 </div>
