--- a/src/app/reservation-finished/reservation-finished.html
+++ b/src/app/reservation-finished/reservation-finished.html
@@ -1,10 +1,10 @@
-<md-card>
-  <md-card-header>Court Reservation Successful</md-card-header>
-  <md-card-content>
+<mat-card>
+  <mat-card-header>Court Reservation Successful</mat-card-header>
+  <mat-card-content>
     <p>Your reservation has been placed succesfully
       on {{ reservationAddResponse.startDatetime | date }}
       for {{reservationAddResponse.hours}} hour(s)
       on court {{reservationAddResponse.courtId}}</p>
     <p>You can access this reservation via the url <a href="{{reservationAddResponse.url}}">{{reservationAddResponse.url}}</a></p>
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
